[gd_scene load_steps=14 format=3 uid="uid://76p3om2v567b"]

[ext_resource type="Texture2D" uid="uid://c868dhfqd2v0u" path="res://Sprites/Bat/bat.32x32.png" id="1_3ujv0"]
[ext_resource type="Script" path="res://bat.gd" id="1_34scp"]

[sub_resource type="Animation" id="Animation_2avid"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_y45ts"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_niimm"]
_data = {
"Idle": SubResource("Animation_2avid"),
"RESET": SubResource("Animation_y45ts")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_22kme"]
atlas = ExtResource("1_3ujv0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjjdf"]
atlas = ExtResource("1_3ujv0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrn6c"]
atlas = ExtResource("1_3ujv0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss7os"]
atlas = ExtResource("1_3ujv0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw7kw"]
atlas = ExtResource("1_3ujv0")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4shs8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_22kme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjjdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrn6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss7os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw7kw")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t82tc"]
size = Vector2(26, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_slmp7"]
size = Vector2(146, 108)

[node name="Bat" type="CharacterBody2D"]
script = ExtResource("1_34scp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_niimm")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4shs8")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -4.5)
shape = SubResource("RectangleShape2D_t82tc")

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(2, 32)
scale = Vector2(0.826199, 1.46734)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-3, 37)
shape = SubResource("RectangleShape2D_slmp7")

[node name="BulletSpawnPoint" type="Node2D" parent="."]
position = Vector2(-1, 9)

[node name="BulletSpawnPoint2" type="Node2D" parent="."]
position = Vector2(10, 9)

[node name="BulletSpawnPoint3" type="Node2D" parent="."]
position = Vector2(-15, 9)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
